# py_binary_without_system_python

./: BUILD.bazel  README.md  WORKSPACE  http_archive_local.bzl  sample.py
python/: BUILD.bazel
