package(default_visibility = ['//visibility:public'])

alias(
    name = "tab_python_runtime",
    actual = select({
        "@bazel_tools//src/conditions:windows": "@python_windows//:tab_python_runtime",
        "@bazel_tools//src/conditions:darwin_x86_64": "@python_osx//:tab_python_runtime",
        "@bazel_tools//src/conditions:linux_x86_64": "@python_linux//:tab_python_runtime",
    }),
)
